# silent-notetaker

./: .gitignore  CONTRIBUTING-RUST.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  Start Notetaker.command  _headers  bench-latency.html  bridge-engine.js  bridge.py  clippy.toml  coi-server.py  deny.toml  deploy-cloudflare.sh  diag-engine.js  diarization-engine.js  dual-engine.js  exports-engine.js  extension-host.js  index.html  mel_fb.json  nemotron-engine.js  notes-engine.js  overview.html  question-worker.js  qwen-notes-test.html  rust-toolchain.toml  selection-engine.js  sensevoice-engine.js  sensevoice-loader.js  session-engine.js  start.sh  storage-engine.js  test-playwright-cpu-tier.mjs  transcription-worker.js  voxtral-engine.js  whisper-engine.js
crates/nemotron-asr/: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  README_WASM.md  webdriver.json
crates/nemotron-asr/examples/: transcribe.rs
crates/nemotron-asr/examples/web/: index.html  mic.html
crates/nemotron-asr/reference/: FINDINGS.md  inspect_onnx.py
crates/nemotron-asr/src/: audio.rs  backend_web.rs  chunk_core.rs  constants.rs  lib.rs  model.rs  streaming.rs  vocab.rs
crates/nemotron-asr/test-assets/: golden_transcript.txt  test_sentence.txt
crates/nemotron-asr/tests/: browser_smoke.rs  golden.rs
crates/silent-audio/: Cargo.toml
crates/silent-audio/src/: error.rs  lib.rs  mel.rs
crates/silent-core/: Cargo.toml
crates/silent-core/bindings/: AsrCapabilities.ts  AsrError.ts  BridgeAction.ts  BridgeStatus.ts  Cache.ts  CacheStore.ts  Correction.ts  CorrectionCommand.ts  CorrectionEvent.ts  DeviceTier.ts  DiagRow.ts  DiarizationCommand.ts  DiarizationEvent.ts  EngineEvent.ts  EngineStats.ts  ExecutionProvider.ts  Host.ts  ImageEncoding.ts  Meeting.ts  MigrationStatus.ts  Model.ts  ModelFile.ts  ModelId.ts  ModelResolveError.ts  ModelUi.ts  Note.ts  NoteCategory.ts  NoteCommand.ts  NoteCounters.ts  NoteEvent.ts  PerfBudget.ts  Provider.ts  QuestionCommand.ts  QuestionEvent.ts  QuestionType.ts  QwenNote.ts  RecapGroup.ts  Registry.ts  RelabelEntry.ts  Screenshot.ts  (+13 more)
crates/silent-core/goldens/diag/: diag.json
crates/silent-core/goldens/export/: executive_line_empty.json  executive_line_full.json  executive_line_singular.json  history_replay.json  notes_empty_title.json  notes_no_time.json  notes_with_time.json  summary_with_ai_notes.json  transcript_no_time.json  transcript_with_time.json
crates/silent-core/goldens/format/: session_formatters.json
crates/silent-core/goldens/timestamp/: ago.json  clock.json  duration.json  elapsed.json
crates/silent-core/src/: bridge.rs  commands.rs  corrections.rs  diag.rs  diarization.rs  engine.rs  error.rs  events.rs  export.rs  ids.rs  lib.rs  notes.rs  questions.rs  registry.rs  session.rs  storage.rs  timestamp.rs
crates/silent-core/tests/: diag_golden.rs  export_golden.rs  registry_real_toml.rs  registry_roundtrip.rs  session_golden.rs  timestamp_golden.rs
crates/silent-diarization/: Cargo.toml
crates/silent-diarization/goldens/recluster/: messy_three_speaker.json  messy_two_speaker.json  over_split_repair.json  recluster_preserves_rename.json
crates/silent-diarization/goldens/tracker/: clean_two_speaker.json  merge_edge_cases.json  rename_then_merge.json
crates/silent-diarization/src/: embedder.rs  embedder_web.rs  error.rs  lib.rs  tracker.rs
crates/silent-diarization/tests/: recluster_golden.rs  titanet_golden.rs  tracker_golden.rs
crates/silent-extension-sdk/: Cargo.toml
crates/silent-extension-sdk/bindings/: Capabilities.ts  DataCapability.ts  Envelope.ts  ExportSnapshot.ts  ExtensionMessage.ts  ExtensionName.ts  GrantSet.ts  HostMessage.ts  Manifest.ts  ManifestError.ts  NameError.ts  NetworkGrant.ts  NetworkGrantError.ts  NoteCategory.ts  NoteItem.ts  SpeakerLabel.ts  TranscriptSegment.ts  UiCapability.ts  Version.ts  VersionError.ts
crates/silent-extension-sdk/src/: capability.rs  lib.rs  manifest.rs  permissions.rs  protocol.rs  validation.rs
crates/silent-extension-sdk/tests/: manifest_validation.rs  permissions.rs  protocol.rs
crates/silent-inference/: Cargo.toml
crates/silent-inference/goldens/dual/: interleavings.json
crates/silent-inference/src/: dual.rs  engine.rs  lib.rs  selection.rs  sensevoice.rs  voxtral_recycle.rs  whisper_stream.rs
crates/silent-inference/tests/: dual_golden.rs
crates/silent-notes/: Cargo.toml
crates/silent-notes/goldens/corrections/: basic.json  edge_empty.json  global_all_case.json  insertion_order_chaining.json  multi_pair.json  regex_special_escaped.json  substring_no_boundary.json  unicode.json
crates/silent-notes/goldens/extractor/: cross_line_buffering.json  flush_trigger_at_stop.json  long_unpunctuated_flush.json  multiple_open_questions.json  one_per_category.json  open_question_resolution.json  precedence_and_question_skip.json  skips_and_no_triggers.json  stress_sweep.json
crates/silent-notes/goldens/questions/: golden_questions.json
crates/silent-notes/goldens/qwen/: golden_qwen.json
crates/silent-notes/src/: corrections.rs  extractor.rs  lib.rs  questions.rs  qwen.rs
crates/silent-notes/src/extractor/: triggers.rs
crates/silent-notes/tests/: corrections_golden.rs  extractor_golden.rs  questions_golden.rs  qwen_golden.rs
crates/silent-storage/: Cargo.toml
crates/silent-storage/goldens/search/: limit_50_cap.json  multi_field_order.json  no_match.json  notes_match.json  order_newest_first.json  title_case_insensitive.json  (+3 more)
crates/silent-storage/src/: backup.rs  error.rs  lib.rs  migrate.rs  reader.rs  search.rs  summary.rs  writer.rs
crates/silent-storage/tests/: browser_idb.rs  search_golden.rs
nemotron-asr/: .gitignore  Cargo.toml
nemotron-asr/examples/web/: index.html
nemotron-asr/reference/: README.md
nemotron-asr/src/: backend_web.rs  constants.rs  error.rs  lib.rs  model.rs  streaming.rs  vocab.rs
nemotron-asr/tests/: browser_smoke.rs  golden.rs
server/: Cargo.toml
server/src/: ext_route.rs  main.rs
xtask/: Cargo.toml
xtask/src/: deploy_gate.rs  gen_headers.rs  main.rs  model_audit.rs
(+97 files in other folders)
