# xtask — build/audit tooling for Silent Notetaker (Task D2 implementation).
# `anyhow` is acceptable at binary/xtask boundaries (PRD "Core contracts").
[package]
name = "xtask"
version = "0.1.0"
description = "Build/audit tooling for Silent Notetaker: model audit, CSP/_headers generation, deploy gates, golden harness."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
silent-core = { path = "../crates/silent-core" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
toml = { workspace = true }
serde = { workspace = true }
walkdir = "2"

[dev-dependencies]
tempfile = "3"
