[package]
name = "nemotron-asr"
version = "0.1.0"
# TODO-D3: migrate to edition 2024 to match the rest of the workspace. Left at
# 2021 here because the streaming.rs / backend_web.rs consolidation (Task D3)
# touches the same files and a same-time edition bump would muddy that diff; the
# crate also keeps its own pinned deps (ort =2.0.0-rc.12, ort-web 0.2.1) and
# publishes to crates.io standalone, so its edition is intentionally decoupled
# from [workspace.package].edition. Migration is trivial (no 2024-breaking
# patterns surveyed) and tracked for Phase D, Task D3.
edition = "2021"
description = "Streaming ASR engine for NVIDIA nemotron-speech-streaming-en-0.6b (ONNX, cache-aware RNN-T) — native + wasm32."
license = "MIT OR Apache-2.0"
keywords = ["speech-recognition", "asr", "nemotron", "onnx", "streaming"]
categories = ["multimedia::audio", "science"]

# Workspace member (Phase 1: moved root `nemotron-asr/` → `crates/nemotron-asr/`)
# that stays STANDALONE-BUILDABLE on purpose: it keeps its own metadata, pinned
# RC dependencies, README, LICENSE, and tests so `cargo publish` / `wasm-pack`
# work from this dir alone. It joins the workspace only for unified gating
# (fmt/check/test/clippy) — it deliberately does NOT inherit
# [workspace.package] or [workspace.dependencies]. The standalone release
# profile that keeps the wasm bundle small (opt-level "s" + LTO) now lives in
# the workspace root [profile.release] (member profiles are ignored in a
# workspace); the wasm build therefore keeps identical size characteristics.
# The sibling `server/` crate is `workspace.exclude`d and stays independent.
#
# Lints: this crate moves in AS-IS (spec Task C1 item 4) and keeps its own lint
# posture rather than opting into the strict [workspace.lints] (clippy pedantic,
# unwrap_used=deny). Tightening it to the workspace bar is bundled with the
# Phase D / Task D3 chunking-loop consolidation that already rewrites
# streaming.rs / backend_web.rs, so the lint churn lands in one reviewable diff
# instead of contaminating this move. It is still gated by the workspace
# fmt/check/test runs and clippy `all` (default-on lints).

[lib]
name = "nemotron_asr"
path = "src/lib.rs"
# `cdylib` is required for the wasm32 build (wasm-pack); `rlib` keeps the
# native library + examples + tests linkable as usual.
crate-type = ["cdylib", "rlib"]

[[example]]
name = "transcribe"
path = "examples/transcribe.rs"

# ---------------------------------------------------------------------------
# Target-agnostic dependencies (pure Rust, build on both native and wasm).
# audio.rs, vocab.rs, streaming.rs depend only on these.
# ---------------------------------------------------------------------------
[dependencies]
ndarray = "0.17"
realfft = "3"
thiserror = "2"

# ---------------------------------------------------------------------------
# Native (non-wasm) dependencies.
#
# ort with default features gives `download-binaries` (auto-fetches the native
# ONNX Runtime dylib), `ndarray`, `std`, and `api-24`. `hound` reads WAV files
# and is only used by the native `load_wav_mono` helper / examples / tests.
# ---------------------------------------------------------------------------
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ort = { version = "=2.0.0-rc.12", features = ["ndarray"] }
hound = "3.5"

# ---------------------------------------------------------------------------
# wasm32 dependencies.
#
# `ort` here drops `download-binaries`/native linking and switches to the
# `alternative-backend` feature so `ort-web` can supply the OrtApi. `api-17` is
# the API level ort-web targets. `ort-web` bridges to onnxruntime-web (it
# fetches the ORT-web JS + WASM itself at runtime).
# ---------------------------------------------------------------------------
[target.'cfg(target_arch = "wasm32")'.dependencies]
ort = { version = "=2.0.0-rc.12", default-features = false, features = [
    "std",
    "ndarray",
    "api-17",
    "alternative-backend",
] }
# Latest published ort-web; the `+1.24` build metadata (onnxruntime-web 1.24)
# is informational and stripped by Cargo. Also depends on `ort =2.0.0-rc.12`.
ort-web = "0.2.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
console_error_panic_hook = "0.1"
# `hound` is pure Rust and compiles to wasm. It's included here only so the
# unchanged `audio.rs` (whose native `load_wav_mono` references it) keeps
# compiling on wasm; `WasmAsr` takes f32 samples directly from JS and never
# calls it, so it is dead code in the wasm binary.
hound = "3.5"

[dev-dependencies]
wasm-bindgen-test = "0.3"

# ---------------------------------------------------------------------------
# Explicit test targets.
#
# `golden` is native-only (uses OrtBackend + hound). The file itself is gated
# with `#![cfg(not(target_arch = "wasm32"))]` but declaring it explicitly here
# lets `cargo test --target wasm32-unknown-unknown` skip it cleanly instead of
# trying to compile a binary that would fail to link the native ORT backend.
#
# `browser_smoke` is wasm32-only (uses wasm-bindgen-test).  Declaring it
# explicitly allows `cargo test` on the native target to skip it without
# errors, while `wasm-pack test --headless --chrome` picks it up.
# ---------------------------------------------------------------------------
[[test]]
name = "golden"
path = "tests/golden.rs"

[[test]]
name = "browser_smoke"
path = "tests/browser_smoke.rs"
harness = true

# NOTE: the release profile (opt-level "s" + LTO, which keep the wasm bundle
# small) now lives in the workspace root [profile.release]. Cargo honors
# `[profile.*]` only in the workspace root, so a member-level copy here would be
# silently ignored (and warned about). For a fully standalone build outside the
# workspace, re-add:
#   [profile.release]
#   opt-level = "s"
#   lto = true
