[package]
name = "nemotron-asr"
version = "0.1.0"
# Edition 2021 retained (not migrated to 2024): `cargo fix --edition` flags a
# tail-expr-drop-order warning in `model::encoder_frame` where ndarray's
# `OwnedRepr<A>` drop order changes in temporaries. While harmless (pure memory
# dealloc, no side effects), the spec requires leaving 2021 when anything
# non-trivial surfaces. This is the one finding. Track for Phase K hardening.
edition = "2021"
description = "Cache-aware RNN-T streaming ASR for NVIDIA nemotron-speech-streaming-en-0.6b (ONNX) — the same Rust code runs natively and in the browser (wasm32)."
authors = ["Brevity Ventures"]
license = "MIT OR Apache-2.0"
keywords = ["speech-recognition", "asr", "nemotron", "onnx", "streaming"]
categories = ["multimedia::audio", "science"]
repository = "https://github.com/brevity-ventures/silent-notetaker"
documentation = "https://docs.rs/nemotron-asr"
homepage = "https://brevity.ventures"
readme = "README.md"
# MSRV is part of the public contract (rust-toolchain.toml policy:
# latest-stable-minus-two). An MSRV bump is a semver-minor change.
rust-version = "1.93"

# Publish hygiene: ship the Rust crate, not the provenance/demo scaffolding.
# `.gitignore` already keeps /target, /pkg, /vendor, /models, and Cargo.lock out
# of the package; this list additionally drops the Python reference harness
# (kept in-repo for credibility, not needed to build or run the crate) and the
# wasm demo HTML. Retained on purpose: `test-assets/test_16k.wav` (golden test
# fixture, 192 KB), `reference/FINDINGS.md` + `README_WASM.md` (linked from the
# README and small).
exclude = [
    "reference/golden_harness.py",
    "reference/inspect_onnx.py",
    "examples/web/",
    "webdriver.json",
]

# Workspace member (Phase 1: moved root `nemotron-asr/` → `crates/nemotron-asr/`)
# that stays STANDALONE-BUILDABLE on purpose: it keeps its own metadata, pinned
# RC dependencies, README, LICENSE, and tests so `cargo publish` / `wasm-pack`
# work from this dir alone. It joins the workspace only for unified gating
# (fmt/check/test/clippy) — it deliberately does NOT inherit
# [workspace.package] or [workspace.dependencies]. The standalone release
# profile that keeps the wasm bundle small (opt-level "s" + LTO) now lives in
# the workspace root [profile.release] (member profiles are ignored in a
# workspace); the wasm build therefore keeps identical size characteristics.
# The sibling `server/` crate is `workspace.exclude`d and stays independent.
#
# Lints: this crate opts into [workspace.lints] as of Task D3. Any per-crate
# relaxations carry documented rationale at the allow site. The TODO-D3 edition
# migration is addressed below.

[lib]
name = "nemotron_asr"
path = "src/lib.rs"
# `cdylib` is required for the wasm32 build (wasm-pack); `rlib` keeps the
# native library + examples + tests linkable as usual.
crate-type = ["cdylib", "rlib"]

[[example]]
name = "transcribe"
path = "examples/transcribe.rs"

# ---------------------------------------------------------------------------
# Target-agnostic dependencies (pure Rust, build on both native and wasm).
# audio.rs, vocab.rs, streaming.rs depend only on these.
# ---------------------------------------------------------------------------
[dependencies]
ndarray = "0.17"
realfft = "3"
thiserror = "2"

# ---------------------------------------------------------------------------
# Native (non-wasm) dependencies.
#
# ort with default features gives `download-binaries` (auto-fetches the native
# ONNX Runtime dylib), `ndarray`, `std`, and `api-24`. `hound` reads WAV files
# and is only used by the native `load_wav_mono` helper / examples / tests.
#
# ⚠ UPGRADE CHECKPOINT (PRD risk table). `ort =2.0.0-rc.12` is a hard pin on a
# release candidate. The exact-version pin is intentional: ort 2.0 RCs carry
# breaking API changes between releases, and the wasm `alternative-backend` leg
# must stay lock-step with `ort-web 0.2.1` (which itself depends on
# `ort =2.0.0-rc.12`). Bumping ort without bumping ort-web breaks the wasm
# build. Scheduled checkpoint: re-evaluate at ort 2.0 GA (PRD Phase 5) — verify
# the native golden test still passes, the wasm bundle stays ~424 KB, and the
# matching ort-web release is available before relaxing this pin. A bump here is
# a semver-minor change for this crate (new RC/GA can shift behavior).
# ---------------------------------------------------------------------------
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ort = { version = "=2.0.0-rc.12", features = ["ndarray"] }
hound = "3.5"

# ---------------------------------------------------------------------------
# wasm32 dependencies.
#
# `ort` here drops `download-binaries`/native linking and switches to the
# `alternative-backend` feature so `ort-web` can supply the OrtApi. `api-17` is
# the API level ort-web targets. `ort-web` bridges to onnxruntime-web (it
# fetches the ORT-web JS + WASM itself at runtime).
# ---------------------------------------------------------------------------
[target.'cfg(target_arch = "wasm32")'.dependencies]
ort = { version = "=2.0.0-rc.12", default-features = false, features = [
    "std",
    "ndarray",
    "api-17",
    "alternative-backend",
] }
# Latest published ort-web; the `+1.24` build metadata (onnxruntime-web 1.24)
# is informational and stripped by Cargo. Also depends on `ort =2.0.0-rc.12`.
ort-web = "0.2.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
console_error_panic_hook = "0.1"
# `hound` is pure Rust and compiles to wasm. It's included here only so the
# unchanged `audio.rs` (whose native `load_wav_mono` references it) keeps
# compiling on wasm; `WasmAsr` takes f32 samples directly from JS and never
# calls it, so it is dead code in the wasm binary.
hound = "3.5"

# D3 deliverable: `s![]` macro usage replaced with `index_axis` calls, so
# the ndarray `unsafe_code` conflict is resolved. The workspace lint bar is
# now active for this crate; any per-site #[allow] carries a documented reason.
[lints]
workspace = true

[dev-dependencies]
wasm-bindgen-test = "0.3"

# ---------------------------------------------------------------------------
# Explicit test targets.
#
# `golden` is native-only (uses OrtBackend + hound). The file itself is gated
# with `#![cfg(not(target_arch = "wasm32"))]` but declaring it explicitly here
# lets `cargo test --target wasm32-unknown-unknown` skip it cleanly instead of
# trying to compile a binary that would fail to link the native ORT backend.
#
# `browser_smoke` is wasm32-only (uses wasm-bindgen-test).  Declaring it
# explicitly allows `cargo test` on the native target to skip it without
# errors, while `wasm-pack test --headless --chrome` picks it up.
# ---------------------------------------------------------------------------
[[test]]
name = "golden"
path = "tests/golden.rs"

[[test]]
name = "browser_smoke"
path = "tests/browser_smoke.rs"
harness = true

# NOTE: the release profile (opt-level "s" + LTO, which keep the wasm bundle
# small) now lives in the workspace root [profile.release]. Cargo honors
# `[profile.*]` only in the workspace root, so a member-level copy here would be
# silently ignored (and warned about). For a fully standalone build outside the
# workspace, re-add:
#   [profile.release]
#   opt-level = "s"
#   lto = true

# ---------------------------------------------------------------------------
# docs.rs configuration.
#
# Build the API docs on the default (native) target. On native, `OrtBackend`
# exists and the wasm-only `backend_web` module is cfg'd out; the crate-level
# docs reference `backend_web` only as a plain code span, so the native docs
# build is clean at the published bar (zero warnings with missing_docs denied).
# Building docs on wasm32 instead would break the native-only `OrtBackend`
# intra-doc links, so wasm32 is deliberately NOT a docs.rs target — the wasm
# leg is documented in prose and in README_WASM.md.
# ---------------------------------------------------------------------------
[package.metadata.docs.rs]
all-features = false
rustdoc-args = ["--cfg", "docsrs"]
