# Engine host adapters and registry-driven selection policy. Phase 5 (Tasks
# I1–I4): engine traits' concrete impls, the JS host adapter (transformers.js
# command protocol), the sherpa-onnx host, Voxtral's two-cap recycle policy, and
# registry-driven selection + device tiers. Depends on silent-core contracts.
#
# Task I1 landed the Voxtral two-cap context-recycle policy (`voxtral_recycle`):
# pure Rust "law" with no browser deps, natively unit-tested per PRD R2. The
# `wasm-bindgen` / `serde-wasm-bindgen` glue that hands `HostCommand`s to the JS
# worker is a thin later wiring layer (silent-web), so this crate keeps no
# browser dependency and stays testable without a browser or a GPU.
[package]
name = "silent-inference"
version = "0.1.0"
description = "Engine host adapters and registry-driven selection policy for Silent Notetaker."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
silent-core = { path = "../silent-core" }
# `HostCommand`s cross the typed boundary to the JS host as serde JSON /
# serde-wasm-bindgen (the b2 spike's command shape). `derive` only; no browser
# deps land here — the serde-wasm-bindgen hop lives in silent-web.
serde = { workspace = true }

[dev-dependencies]
# Tests assert the on-the-wire command shape the JS host consumes.
serde_json = { workspace = true }
